force-app/main/default/objects/Component__c/Component__c.object-meta.xml
<CustomObject>
    <description>Lippert products within an RV</description>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>