force-app/main/default/objects/Component__c/fields/ProductUniqueId__c.field-meta.xml
<CustomField>
    <fullName>ProductUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>ProductUniqueId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>