force-app/main/default/objects/Component__c/listViews/Charlie_s_RV.listView-meta.xml
<ListView>
    <fullName>Charlie_s_RV</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Serial_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Charlie's RV</label>
</ListView>